--- a/style.css
+++ b/style.css
@@ -6,7 +6,14 @@
 }
 
 .btn {
-  padding: 2%;
+  padding: 5%;
   margin: 5%;
   font-size: 60px;
+}
+
+.results {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
